tests/baselines/reference/interfaceMayNotBeExtendedWitACall.js
//// [interfaceMayNotBeExtendedWitACall.ts]
interface color {}

interface blue extends color() { // error

}


//// [interfaceMayNotBeExtendedWitACall.js]
